# enigma_duel_core

./: .gitignore  README.md  foundry.toml
script/client/: index.html  package-lock.json  package.json
script/client/src/: App.css  App.tsx  constants.ts  global.d.ts  helpers.ts  interface.ts  test_ui.html  types.ts  vite-env.d.ts
script/deployer/local/: constants.ts  local_deployer.sh
script/rust/EnigmaDuelRustScripts/: Cargo.toml  update.rs
script/rust/EnigmaDuelRustScripts/src/: lib.rs  test_utils.rs
script/server/EnigmaDuelRustScripts/src/: models.rs
script/ts/: package-lock.json  package.json  readme.md
script/ts/src/: global.d.ts  helpers.ts  interface.ts  types.ts
src/: EnigmaDuel.sol  EnigmaDuelProxy.sol  EnigmaDuelProxyAdmin.sol  EnigmaDuelState.sol  EnigmaDuelToken.sol  Errors.sol  Events.sol  IEnigmaDuel.sol  ModuleUsages.md  Structures.sol  Utils.sol
src/interfaces/: Events.sol  IEnigmaDuel.sol  IEnigmaDuelState.sol
src/libs/: Errors.sol  Structures.sol
src/utils/: Utils.sol
test/: EnigmaDuel.t.sol
