[package]
name = "EnigmaDuelRustScripts"
version = "0.1.0"
edition = "2021"

[lib]
name = "your_library_name"
path = "src/lib.rs"  # This is the default path

[dependencies]
ethabi = "18.0.0"
tokio = { version = "1.39.2", features = ["full", "macros"] }
web3 = "0.19.0"
ethers = { version = "2.0", features = ["rustls", "ethers-solc"] }
eyre = "0.6.12"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
dotenv = "0.15.0"
ethane = { version = "1.0.2", features = ["non-blocking"] }
ethane-abi = "1.0.2"
sha3 = "0.10.8"
